--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ input[type="range"]{
     /* background: hsl(174, 77%, 80%); */
     background-size: 50% ;
     background-repeat: no-repeat;
-    background: linear-gradient(to right, hsl(174, 86%, 45%) 0%, 
+    background: linear-gradient(to right, #fff 0%, 
                                           hsl(174, 86%, 45%) 50%,
                                           #fff 51%, 
                                           #fff 100%);
