--- a/style.css
+++ b/style.css
@@ -75,9 +75,9 @@ input[type="range"]{
     background-size: 50% ;
     background-repeat: no-repeat;
     background: linear-gradient(to right, #fff 0%, 
-                                          hsl(174, 86%, 45%) 50%,
-                                          #fff 51%, 
-                                          #fff 100%);
+                                          hsl(174, 86%, 45%) 100%);
+                                          /*#fff 50%, 
+                                          #fff 100% */
 }
 input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
@@ -137,7 +137,7 @@ input[type="checkbox"] {
 	border-radius: 50%;
 	position: absolute;
 	top: 3px;
-	left: 3px;
+	left: 2px;
 	height: 0.8em;
 	width: 0.8em;
 	transform: translateX(0px);
